# sway-examples

./: .gitignore  .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.github/workflows/: deploy.yml  pr-release.yaml  preview.yml  release-npm.yaml
airdrop/: .env.example  .gitignore  Forc.toml  README.md  fuel-toolchain.toml  fuels.config.bundled_i0xlqitiz9s.mjs  fuels.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vite.config.ts.timestamp-1730193200969-61b1ec19a46a.mjs  vitest.config.mts
airdrop/assets/: HomeCard-CrQuUHqd.js  HomeCard-OSwF8hUn.js  ccip-BLBm5ynE.js  ccip-RHG8e-EY.js  (+19 more)
airdrop/sway-programs/: Cargo.toml  Forc.toml  fuel-toolchain.toml
airdrop/sway-programs/contract/: Cargo.toml  Forc.toml
airdrop/sway-programs/contract/src/: constants.sw  events.sw  interface.sw  main.sw
airdrop/sway-programs/contract/tests/: harness.rs
airdrop/sway-programs/src20/: Forc.toml
airdrop/sway-programs/src20/src/: main.sw
airdrop/sway-programs/tests/: harness.rs
app-commons/: package.json  tailwind.config.ts  tsconfig.json  tsup.config.mjs  tsup.config.ts
counter/: .gitignore  README.md  fuels.config.ts  index.html  package.json  tailwind.config.js  vite.config.ts
home/: package.json
nft/: .env.example  Cargo.toml  README.md  fuel-toolchain.toml  fuels.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: changeset-next.ts
(+2011 files in other folders)
