[package]
name = "airdrop"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Nazeeh Vahora <nazeehvahora.786@gmail.com>"]
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.12", features = ["rt", "macros"] }

[dev-dependencies]
fuels = "0.66.1"


[[test]]
harness = true
path = "tests/harness.rs"
name = "integration_tests"



